--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "frontend-code-test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "yarn server & next dev",
-    "build": "next build",
-    "start": "next start",
-    "server": "yarn run json-graphql-server ../server/db.js --p 3001",
-    "test": "jest"
-  },
-  "dependencies": {
-    "next": "12.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "eslint": "^8.19.0",
-    "eslint-config-next": "^12.2.1",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.3",
-    "json-graphql-server": "^2.3.1",
-    "typescript": "^4.7.4"
-  }
+    "name": "frontend-code-test",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "yarn server & next dev",
+        "build": "next build",
+        "start": "next start",
+        "server": "yarn run json-graphql-server ../server/db.js --p 3001",
+        "test": "jest",
+        "type-check": "tsc"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.11.8",
+        "graphql": "^16.9.0",
+        "next": "12.2.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "sass": "^1.79.3"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^12.1.5",
+        "eslint": "^8.19.0",
+        "eslint-config-next": "^12.2.1",
+        "jest": "^28.1.2",
+        "jest-environment-jsdom": "^28.1.3",
+        "json-graphql-server": "^2.3.1",
+        "typescript": "^4.7.4"
+    }
 }
