--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
         "server": "yarn run json-graphql-server ../server/db.js --p 3001",
         "test": "jest",
         "type-check": "tsc",
-        "pretty": "prettier --write ."
+        "pretty": "prettier --write .",
+        "lint": "next lint"
     },
     "dependencies": {
         "@apollo/client": "^3.11.8",
+        "eslint-plugin-react": "^7.37.1",
         "graphql": "^16.9.0",
         "next": "12.2.1",
         "react": "17.0.2",
@@ -20,13 +22,16 @@
         "sass": "^1.79.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.12.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^12.1.5",
-        "eslint": "^8.19.0",
+        "eslint": "^9.12.0",
         "eslint-config-next": "^12.2.1",
+        "globals": "^15.11.0",
         "jest": "^28.1.2",
         "jest-environment-jsdom": "^28.1.3",
         "json-graphql-server": "^2.3.1",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "typescript-eslint": "^8.9.0"
     }
 }
